src/snapshots/i3_cfg__parser__tests__bindcode_1.snap
---
source: src/parser.rs
expression: config
---
{
  "keybindings": [
    {
      "type": "keycode",
      "modifiers": [],
      "key": "214",
      "command": "exec --no-startup-id /home/michael/toggle_beamer.sh"
    }
  ]
}
