src/snapshots/i3_cfg__parser__tests__bindmouse_1.snap
---
source: src/parser.rs
expression: config
---
{
  "keybindings": [
    {
      "type": "button",
      "modifiers": [],
      "key": "2",
      "command": "kill"
    }
  ]
}
