src/snapshots/i3_cfg__parser__tests__bindmouse_2.snap
---
source: src/parser.rs
expression: config
---
{
  "keybindings": [
    {
      "type": "button",
      "modifiers": [
        "Mod4"
      ],
      "key": "2",
      "command": "kill"
    }
  ]
}
