src/snapshots/i3_cfg__parser__tests__bindmouse_3.snap
---
source: src/parser.rs
expression: config
---
{
  "keybindings": [
    {
      "type": "button",
      "modifiers": [],
      "key": "8",
      "command": "move right"
    }
  ]
}
