src/snapshots/i3_cfg__parser__tests__bindsym_modifier_2.snap
---
source: src/parser.rs
expression: config
---
{
  "keybindings": [
    {
      "type": "keysym",
      "modifiers": [
        "Mod4",
        "Shift"
      ],
      "key": "r",
      "command": "restart"
    }
  ]
}
