src/snapshots/i3_cfg__parser__tests__bindsym_release.snap
---
source: src/parser.rs
expression: config
---
{
  "keybindings": [
    {
      "type": "keysym",
      "modifiers": [
        "Mod4"
      ],
      "key": "x",
      "command": "exec --no-startup-id import /tmp/latest-screenshot.png"
    }
  ]
}
