src/snapshots/i3_cfg__parser__tests__keysym.snap
---
source: src/parser.rs
expression: config
---
{
  "keybindings": [
    {
      "type": "keysym",
      "modifiers": [
        "Mod4"
      ],
      "key": "u",
      "command": "border none"
    }
  ]
}
